# FastAPI-ELK

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  filebeat.yml  heartbeat.yml  logstash.conf  metricbeat.yml  pyproject.toml
app/: deps.py  main.py
app/api/v1/: exceptions.py  handlers.py
app/core/: config.py  logger.py
app/repositories/: redis_repository.py
app/schemas/: user_info.py
app/services/: address_service.py
tests/: conftest.py
tests/repositories/: test_redis_repository.py
tests/services/: test_address_service.py
